--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,5 +10,5 @@
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaks }}</p>
     </div>
-    <h3><a href="{% url 'blog.views.post_list'}">Regresar</a></h3>
+    <h3><a href="{% url 'blog.views.post_list' %}">Regresar</a></h3>
 {% endblock %}
