--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,17 +9,17 @@
         </head>
         <body>
             <div class="page-header">
-                <h1><a href="">Reynald0 Blog</a></h1>
-                <hr>
+              <a href="{% url 'blog.views.post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+              <h1><a href="{% url 'home' %}">Reynald0 Blog</a></h1>
+              <hr>
             </div>
-
-                <div class="content container">
-                  <div class="row">
-                      <div class="col-md-8">
-                          {% block content %}
-                          {% endblock %}
-                      </div>
-                  </div>
-              </div>
+              <div class="content container">
+                <div class="row">
+                    <div class="col-md-8">
+                        {% block content %}
+                        {% endblock %}
+                    </div>
+                </div>
+            </div>
         </body>
 </html>
