--- a/blog/templates/blog/no.html
+++ b/blog/templates/blog/no.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-        <p> No estas registrado! </p>
+        <div class="alert alert-danger" role="alert"><strong>NO</strong> has iniciado sesion! Por favor inicia sesión o registrate.</div>
     <h3><a href="{% url 'blog.views.post_list' %}">Regresar</a></h3>
 {% endblock %}
