--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,5 +1,16 @@
 {% extends 'blog/base.html' %}
 
+{% block opciones %}
+  {% if log %}
+    <a href="{% url 'blog.views.post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    <a href="{% url 'account.views.logout_view' %}" class="top-menu"><span class="glyphicon glyphicon-log-out"></span></a>
+    <p class ="top-menu">Bienvenido {{ username }}</p>
+  {% else %}
+    <a href="{% url 'account.views.login_user' %}" class="top-menu">Inicar sesion</a>
+    <a href="{% url 'account.views.registro_usuario' %}" class="top-menu">Registrarse</a>
+  {% endif %}
+{% endblock opciones%}
+
 {%block content %}
   {% for post in posts %}
     <div class="post">
